--- a/server/package.json
+++ b/server/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "visys-cloud-server",
-  "version": "1.0.0",
-  "description": "Backend server for Visys Cloud",
-  "main": "dist/index.js",
-  "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@sequelize/core": "^7.0.0-alpha.43",
-    "@sequelize/postgres": "^7.0.0-alpha.43",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1",
-    "pg-hstore": "^2.3.4",
-    "razorpay": "^2.9.5",
-    "sequelize": "^6.37.5"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.10.5",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+	"name": "visys-cloud-server",
+	"version": "1.0.0",
+	"description": "Backend server for Visys Cloud",
+	"main": "dist/index.js",
+	"scripts": {
+		"start": "NODE_ENV=production node dist/index.js",
+		"dev": "NODE_ENV=development nodemon src/index.ts",
+		"build": "tsc",
+		"test": "jest"
+	},
+	"dependencies": {
+		"@sequelize/core": "^7.0.0-alpha.43",
+		"@sequelize/postgres": "^7.0.0-alpha.43",
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
+		"pg": "^8.13.1",
+		"pg-hstore": "^2.3.4",
+		"razorpay": "^2.9.5",
+		"sequelize": "^6.37.5"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.5",
+		"@types/node": "^20.10.5",
+		"nodemon": "^3.0.2",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.3.3"
+	},
+	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
